fix(game/PlayerList): Prevent player name from collapsing

--- a/src/views/_root_/_rooms_/game/styles/PlayerList.module.css
+++ b/src/views/_root_/_rooms_/game/styles/PlayerList.module.css
@@ -5,6 +5,7 @@
 }
 
 .player {
+  min-width: max-content;
   padding: 8px;
 }
 
